<resources>
    <string name="app_name">QuickFlick</string>
    <string name="app_full_name">QuickFlick Keyboard</string>
    <string name="app_label">Hacking English (US)</string>
    <string name="test_input_space">Test Input Space.</string>

    <!-- Theme -->
    <string name="theme_base">Base</string>
    <string name="theme_lime">Lime</string>
    <string name="theme_morse">Morse</string>

    <!-- Keyboard/Footer Height Level -->
    <string name="keyboard_height_1">Smallest</string>
    <string name="keyboard_height_2">Small</string>
    <string name="keyboard_height_3">Medium</string>
    <string name="keyboard_height_4">Large</string>
    <string name="keyboard_height_5">Largest</string>
    <string name="footer_height_1">60 thou</string>
    <string name="footer_height_2">120 thou</string>
    <string name="footer_height_3">180 thou</string>
    <string name="footer_height_4">240 thou</string>
    <string name="footer_height_5">300 thou</string>

    <!-- Preference key name -->
    <string name="preferences_x1">threshold_x1</string>
    <string name="preferences_x2">threshold_x2</string>
    <string name="preferences_y1">threshold_y1</string>
    <string name="preferences_y2">threshold_y2</string>
    <string name="preferences_cancel_flick">cancel_flick</string>
    <string name="preferences_cancel_input">cancel_input</string>
    <string name="preferences_assistant_preview">popup_preview</string>
    <string name="preferences_keyboard_height">keyboard_height</string>
    <string name="preferences_keyboard_height_landscape">keyboard_height_landscape</string>
    <string name="preferences_keyboard_footer_size">footer_height</string>
    <string name="preferences_keyboard_footer_size_landscape">footer_height_landscape</string>
    <string name="preferences_theme_indicator">theme_indicator</string>
    <string name="preferences_keys_adjustment">cache_last_adjustment_is_right</string>

    <!-- Preference Labels -->
    <string name="preferences_category_horizontal">Horizontal flick sensitivity</string>
    <string name="preferences_category_vertical">Vertical flick sensitivity</string>
    <string name="preferences_category_canceler">Multi tap settings</string>
    <string name="preferences_category_assistant">Input assistant</string>
    <string name="preferences_category_appearance">Appearance</string>
    <string name="preferences_category_others">others</string>>
    <string name="preferences_title_wiki">Offline help</string>
    <string name="preferences_title_license">Licenses</string>
    <string name="preferences_title_threshold_x1">1st horizontal threshold</string>
    <string name="preferences_title_threshold_x2">2nd horizontal threshold</string>
    <string name="preferences_title_threshold_y1">1st horizontal threshold</string>
    <string name="preferences_title_threshold_y2">2nd horizontal threshold</string>
    <string name="preferences_title_cancel_flick">Flick reseter</string>
    <string name="preferences_title_cancel_input">Input canceller</string>
    <string name="preferences_title_assistant_preview">Use preview</string>
    <string name="preferences_title_keys_height">Height in portrait</string>
    <string name="preferences_title_keys_height_landscape">Height in landscape</string>
    <string name="preferences_title_keyboard_footer_size">Footer height in portrait</string>
    <string name="preferences_title_keyboard_footer_size_landscape">Footer height in landscape</string>
    <string name="preferences_title_indicator">Indicator theme</string>
    <string name="preferences_title_keys_adjustment">Toggle layout to right</string>
    <string name="preferences_summary_cancel_flick">Reset flicking state with multi tap</string>
    <string name="preferences_summary_cancel_input">Cancel input with twice tap</string>
    <string name="preferences_summary_keys_adjustment">It can also change from keyboard.</string>
    <string name="preferences_summary_keyboard_footer">Lift keyboard when device is landscape</string>

    <!-- Intent data -->
    <string name="intent_wiki">intent_wiki</string>
    <string name="intent_license">intent_license</string>

</resources>
