<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_full_name">

    <PreferenceCategory android:title="@string/preferences_category_horizontal">
        <EditTextPreference
            android:defaultValue="@integer/preferences_x1_default"
            android:key="@string/preferences_x1"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_title_threshold_x1" />
        <EditTextPreference
            android:defaultValue="@integer/preferences_x2_default"
            android:key="@string/preferences_x2"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_title_threshold_x2" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_vertical">
        <EditTextPreference
            android:defaultValue="@integer/preferences_y1_default"
            android:key="@string/preferences_y1"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_title_threshold_y1" />
        <EditTextPreference
            android:defaultValue="@integer/preferences_y2_default"
            android:key="@string/preferences_y2"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preferences_title_threshold_y2" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_canceler">
        <SwitchPreference
            android:defaultValue="@bool/preferences_cancel_flick_default"
            android:key="@string/preferences_cancel_flick"
            android:summary="@string/preferences_summary_cancel_flick"
            android:title="@string/preferences_title_cancel_flick" />
        <SwitchPreference
            android:defaultValue="@bool/preferences_cancel_input_default"
            android:key="@string/preferences_cancel_input"
            android:summary="@string/preferences_summary_cancel_input"
            android:title="@string/preferences_title_cancel_input"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_assistant">
        <SwitchPreference
            android:defaultValue="@bool/preferences_assistant_preview"
            android:key="@string/preferences_assistant_preview"
            android:title="@string/preferences_title_assistant_preview"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_appearance">
        <ListPreference
            android:defaultValue="@string/theme_base"
            android:key="@string/preferences_theme_indicator"
            android:title="@string/preferences_title_indicator"
            android:entries="@array/theme_list"
            android:entryValues="@array/theme_list">
        </ListPreference>
        <ListPreference
            android:defaultValue="@string/keyboard_height_2"
            android:key="@string/preferences_keyboard_height"
            android:title="@string/preferences_title_keys_height"
            android:entries="@array/key_height_list"
            android:entryValues="@array/key_height_list">
        </ListPreference>
        <ListPreference
            android:defaultValue="@string/keyboard_height_2"
            android:key="@string/preferences_keyboard_height_landscape"
            android:title="@string/preferences_title_keys_height_landscape"
            android:entries="@array/key_height_list"
            android:entryValues="@array/key_height_list">
        </ListPreference>
        <ListPreference
            android:defaultValue="@string/footer_height_2"
            android:key="@string/preferences_keyboard_footer_size"
            android:title="@string/preferences_title_keyboard_footer_size"
            android:entries="@array/footer_height_list"
            android:entryValues="@array/footer_height_list">
        </ListPreference>
        <ListPreference
            android:defaultValue="@string/footer_height_2"
            android:key="@string/preferences_keyboard_footer_size_landscape"
            android:title="@string/preferences_title_keyboard_footer_size_landscape"
            android:entries="@array/footer_height_list"
            android:entryValues="@array/footer_height_list">
        </ListPreference>
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preferences_keys_adjustment"
            android:summary="@string/preferences_summary_keys_adjustment"
            android:title="@string/preferences_title_keys_adjustment"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preferences_category_others">
        <Preference
            android:singleLine="true"
            android:title="@string/preferences_title_wiki">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.rkbk60.quickflick"
                android:targetClass="com.rkbk60.quickflick.DocumentActivity"
                android:data="@string/intent_wiki"/>
        </Preference>
        <Preference
            android:singleLine="true"
            android:title="@string/preferences_title_license">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.rkbk60.quickflick"
                android:targetClass="com.rkbk60.quickflick.DocumentActivity"
                android:data="@string/intent_license"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
